--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root {
+    /*font-size: calc(0.5em + 1vw);*/
+    background: #EAEAEA;
+}
+
+/*@media (min-width: 50em) {*/
+/*    :root {*/
+/*        font-size: 1.125em;*/
+/*    }*/
+/*}*/
