--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,8 @@
     /*font-size: calc(0.5em + 1vw);*/
     font-size: 1rem;
     background: #EAEAEA;
+    font-family: Menlo,Monaco,Andale Mono,lucida console,Courier New,monospace;
+
 }
 
 /*@media (min-width: 50em) {*/
